added image generation and return
